Fixes scrollbar

--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -9,7 +9,7 @@ $color-text-transparent: transparent
 $color-rating-good: #1fb86c
 $color-rating-fair: #c6c92d
 $color-rating-bad: #e12361
-$color-border-light: #e3e3e3
+$color-light-grey: rgb(227, 227, 227)
 
 // Fonts
 $font-main: 'Source Sans Pro'
