--- a/src/app/components/actor-carousel-card/actor-carousel-card.component.sass
+++ b/src/app/components/actor-carousel-card/actor-carousel-card.component.sass
@@ -1,15 +1,21 @@
 @use '../../../_variables' as variables
 
 .actor-carousel-card
+    // Añadir a mixin
     border-radius: 8px
     box-shadow: 0 2px 8px rgb(0 0 0 / 10%)
     margin-top: 10px
     margin-bottom: 10px
     margin-left: 10px
     margin-right: 4px
-    border: 1px solid variables.$color-border-light 1
+    // Propio
+    border: 1px solid variables.$color-light-grey 1
     padding-bottom: 10px
     overflow: hidden
+    display: flex
+    flex-direction: column
+    flex: 1
+    min-height: 100%
 
 .image-container
     min-width: 138px
