--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,27 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
 @use 'variables'
 
-@mixin flexCenter($direction: row, $bg)
-    display: flex!important
-    justify-content: center!important
-    align-items: center!important
-    flex-direction: $direction
-    background-color: $bg
-
 body
     font-family: variables.$font-main, Arial, sans-serif
-
-button
-    &::after
-        content: 'Hola'
-
-footer
-    @include flexCenter($direction: column, $bg:variables.$color-text-accent-dark)
-    color: color-text-accent-dark
-    font-weight: 600!important
 
 .carousel
     overflow-x: scroll
     overflow-y: hidden
     display: flex
     flex-direction: row
+    align-items: stretch
+    &::-webkit-scrollbar
+        height: 0.5em
+    &::-webkit-scrollbar-track
+        background-color: transparent
+    &::-webkit-scrollbar-thumb
+        background: #dbdbdb
+        border-radius: 10px
+
+// @mixin flexCenter($direction: row, $bg)
+//     display: flex!important
+//     justify-content: center!important
+//     align-items: center!important
+//     flex-direction: $direction
+//     background-color: $bg
+// button
+//    &::after
+//      content: 'Hola'
+
+// footer
+//     @include flexCenter($direction: column, $bg:variables.$color-text-accent-dark)
+//     color: color-text-accent-dark
+//     font-weight: 600!important
